Fix jump-link styling on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -230,7 +230,7 @@ footer {
   --font-size: 1.5em;
   font-size: var(--font-size);
   rotate: -5deg;
-  transform: translateY(calc(var(--font-size) * -0.5));
+  transform: translateY(calc(var(--font-size) * -0.1));
   color: darkred;
   text-shadow: black 0 0 25px;
 }
